# Atlases

./: MANIFEST.in  mypy.ini  pyproject.toml  setup.cfg  setup.py
.github/workflows/: continuous_integration.yml  release.yml
halfpipe_atlases/: __init__.py  _version.py  brainnetome.py  brainnetome_combined.py  buckner2011.py  build_all.py  difumo.py  freesurfer.py  hcpmmp1.py  hcpmmp1_combined.py  merge.py  power2011.py  schaefer2018_combined.py
src/halfpipe_atlases/: __init__.py  aal.py  brainnetome.py  brainnetome_combined.py  buckner2011.py  build_all.py  difumo.py  enigma_task_based.py  freesurfer.py  freesurfer_cortical.py  freesurfer_subcortical.py  hcpmmp1.py  hcpmmp1_combined.py  merge.py  neuromark.py  power2011.py  schaefer2018_combined.py  ukbiobank.py  yeo2011_combined.py
src/halfpipe_atlases/data/: atlas-ENIGMATaskBasedFMRIRegionsOfInterest_dseg.tsv
src/halfpipe_atlases/data/fsaverage/: lh.aparc.a2009s.gii  lh.aparc.gii  make-annot.sh  rh.aparc.a2009s.gii  rh.aparc.gii
